--- a/app/src/main/res/layout/fragment_new_post.xml
+++ b/app/src/main/res/layout/fragment_new_post.xml
@@ -146,21 +146,20 @@
                     android:background="#D1C4E9 "
                     android:paddingLeft="24dp">
 
-                    <androidx.viewpager2.widget.ViewPager2
-                        android:id="@+id/newPost_ViewPager2"
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:visibility="visible">
+                        android:orientation="horizontal">
 
-                    </androidx.viewpager2.widget.ViewPager2>
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/newPost_RecyclerView"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
 
-                    <ImageButton
-                        android:id="@+id/newPost_addPic_imageButton"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:backgroundTint="#5E35B1"
-                        android:src="@drawable/baseline_add_black_36"
-                        android:tint="#B39DDB" />
+                        </androidx.recyclerview.widget.RecyclerView>
+
+                    </LinearLayout>
 
                 </FrameLayout>
 
